changed docker frontend

--- a/code/deployment/app/Dockerfile
+++ b/code/deployment/app/Dockerfile
@@ -1,18 +1,20 @@
-# Streamlit Dockerfile
-
+# Use an official Python runtime as a parent image
 FROM python:3.9
 
-# Set the working directory
+# Set the working directory in the container
 WORKDIR /app
 
 # Copy the current directory contents into the container at /app
 COPY . /app
 
-# Install the dependencies
-RUN pip install streamlit requests
+# Install any needed packages specified in requirements.txt
+RUN pip install -r requirements.txt
 
-# Expose the default Streamlit port
+# Make port 8501 available to the world outside this container
 EXPOSE 8501
 
-# Command to run the Streamlit app
+# Define environment variable (optional, useful if you want the app not to open a browser window)
+ENV STREAMLIT_SERVER_HEADLESS=true
+
+# Run streamlit when the container launches
 CMD ["streamlit", "run", "streamlit_app.py", "--server.port=8501", "--server.address=0.0.0.0"]
