--- a/code/deployment/api/Dockerfile
+++ b/code/deployment/api/Dockerfile
@@ -20,3 +20,4 @@ EXPOSE 8000
 
 # Run the FastAPI server
 CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "8000"]
+# uvicorn app:app --host 0.0.0.0 --port 8000
