--- a/code/deployment/api/Dockerfile
+++ b/code/deployment/api/Dockerfile
@@ -4,17 +4,16 @@ FROM python:3.9
 # Set the working directory
 WORKDIR /app
 
-# Copy the current directory contents into the container at /app
-COPY . /app
-
 # Install the necessary packages
-RUN pip install fastapi[standard] uvicorn transformers torch
+RUN pip install --no-cache-dir fastapi[standard] uvicorn transformers torch accelerate
 
 # Install additional system dependencies for PyTorch
 # RUN apt-get update && apt-get install -y \
 #     libgl1-mesa-glx \
 #     libglib2.0-0 \
 #     && rm -rf /var/lib/apt/lists/*
+
+COPY . /app
 
 EXPOSE 8000
 
