--- a/code/deployment/app/Dockerfile
+++ b/code/deployment/app/Dockerfile
@@ -1,20 +1,20 @@
-# Use an official Python runtime as a parent image
+# python version
 FROM python:3.9
 
-# Set the working directory in the container
+# working directory in container
 WORKDIR /app
 
-# Copy the current directory contents into the container at /app
+# copy current content to container
 COPY . /app
 
-# Install any needed packages specified in requirements.txt
+# install streamlit
 RUN pip install streamlit
 
-# Make port 8501 available to the world outside this container
+# expose port 8501
 EXPOSE 8501
 
-# Define environment variable (optional, useful if you want the app not to open a browser window)
+# run in headless mode
 ENV STREAMLIT_SERVER_HEADLESS=true
 
-# Run streamlit when the container launches
+# run when container launches
 CMD ["streamlit", "run", "streamlit_app.py", "--server.port=8501", "--server.address=0.0.0.0"]
